# test-in-source

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  app.cpp  main.cpp  math.cpp  test.hpp
